@@ -1,3 +1,5 @@
+* Support limit and offset to ModelSQL count search and search_count
+* Add estimation count to ModelStorage
 * Deduplicate entries in domain inversion's simplify
 * Don't return cached preferences, try to enrich it with the transaction context
 * Use UNION for 'Or'-ed domain with subqueries
